# AI-Sprint-ecom

./: README.md  app.py  pyproject.toml  report.md
src/ai_sprint/: crew.py  main.py
src/ai_sprint/config/: agents.yaml  tasks.yaml
src/ai_sprint/tools/: custom_tool.py
