[project]
name = "ai_sprint"
version = "0.1.0"
description = "Ai-Sprint using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
ai_sprint = "ai_sprint.main:run"
run_crew = "ai_sprint.main:run"
train = "ai_sprint.main:train"
replay = "ai_sprint.main:replay"
test = "ai_sprint.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
